--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase" style="color: darkblue;">A propos de notre startup</h2>
-                    <h3 class="section-subheading text-muted"> <strong> INNOVUP est une startup Tunisienne travaillant dans le secteur informatique et des nouvelles
+                    <h3 class="section-subheading text-muted"> <strong> INNOVUP est une startup Tunisienne fondée par Khalil Driss travaillant dans le secteur informatique et des nouvelles
                         technologies.
                         <br> <br>
                         L’activité principale de la société est le développement d’applications innovantes et intelligentes
@@ -430,7 +430,7 @@ ayant une forte ..
                                     <h2 class="text-uppercase" ><img  style="width:250px;height:60px" src="assets/img/navbar-logo.png" ></h2>
                                  
                                     
-                                    <p class="section-subheading text-muted">INNOVUP est une startup Tunisienne travaillant dans le secteur informatique et des nouvelles
+                                    <p class="section-subheading text-muted">INNOVUP est une startup Tunisienne fondée par <a href="https://www.linkedin.com/in/khalil-driss-06b6317/" target="_blank">Khalil Driss</a> travaillant dans le secteur informatique et des nouvelles
                                         technologies. <br>
                                         L’activité principale de la société est le développement d’applications innovantes et intelligentes
                                         ayant une forte valeur ajoutée dans la vie des citoyens et la participation au programme d’innovation
