--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>INNOVUP company</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -326,10 +326,10 @@ ayant une forte ..
         <section class="page-section" id="contact">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase" style="color: darkblue;">Contact</h2>
-                    <h3 class="section-subheading text-muted"><i class="fas fa-map-marker"></i>   Adresse : Rue la Mer Rouge, Ariana Supérieur, Ariana 2080..</h3>
-                    <h3 class="section-subheading text-muted">   <i class="fa fa-at" ></i>  Adresse email : contact@innovup.com.tn</h3>
-                    <h3 class="section-subheading text-muted"><i class="fa fa-phone" ></i>  Téléphone  : +216 22 57 13 12</h3>
+                    <h2 class="section-heading text-uppercase" style="color: goldenrod;">Contact</h2>
+                    <h3 class="section-subheading text-muted"><i class="fas fa-map-marker"></i>  <strong style="color: floralwhite;">Adresse : Rue la Mer Rouge, Ariana Supérieur, Ariana 2080</strong> </h3>
+                    <h3 class="section-subheading text-muted">   <i class="fa fa-at" ></i> <strong style="color: floralwhite;"> Adresse email : contact@innovup.com.tn </strong></h3>
+                    <h3 class="section-subheading text-muted"><i class="fa fa-phone" ></i> <strong style="color: floralwhite;"> Téléphone  : +216 22 57 13 12 </strong></h3>
                   </div>
         </section>
         <!-- Footer-->
