--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>INNOVUP company</title>
+        <title>INNOVUP</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
@@ -214,7 +214,7 @@ ayant une forte ..
                         </div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <p class="section-subheading text-muted subheading" >Notre vision consiste à devenir leadeur nationale et référence dans le domaine dela technologie de l’information en contribuant à son développement et à sa mise en application dans l’intérêt des entreprises et du grand public.
+                                <p class="section-subheading text-muted subheading" >Notre vision consiste à devenir leadeur nationale et référence dans le domaine de la technologie de l’information en contribuant à son développement et à sa mise en application dans l’intérêt des entreprises et du grand public.
                                     <br>On prévoit aussi l’ouverture au marché européen et africain surtout le programme Africa Digital</p>
                                
                             </div>
@@ -328,7 +328,7 @@ ayant une forte ..
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase" style="color:orange;">Contact</h2>
                     <h3 class="section-subheading text-muted"><i class="fas fa-map-marker"></i>  <strong style="color: floralwhite;">Adresse : Rue la Mer Rouge, Ariana Supérieur, Ariana 2080</strong> </h3>
-                    <h3 class="section-subheading text-muted">   <i class="fa fa-at" ></i> <strong style="color: floralwhite;"> Adresse email : contact@innovup.com.tn </strong></h3>
+                    <h3 class="section-subheading text-muted">   <i class="fa fa-at" ></i> <strong style="color: floralwhite;"> Adresse email : <a HREF="mailto:contact@innovup.com.tn " style="color: floralwhite;">contact@innovup.com.tn </strong></a></strong></h3>
                     <h3 class="section-subheading text-muted"><i class="fa fa-phone" ></i> <strong style="color: floralwhite;"> Téléphone  : +216 22 57 13 12 </strong></h3>
                   </div>
         </section>
@@ -479,7 +479,7 @@ ayant une forte ..
                                             <li> L'administration et l'optimisation des systèmes informatiques</li>
                                             <li>sécurité et audit informatique</li>
                                             <li>Installation et configuration de matériel informatique</li>
-                                            <li>Installation et configuration de matériel informatique</li>
+                    
                                             <li>Administration réseau</li>
                                           </ul>
                                     </p>
